# First-Machine-Learning-Project

./: README.md  app.py  manutencao.csv  pyproject.toml  teste.ipynb
