[project]
name = "projeto-ml"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "streamlit (>=1.43.1,<2.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)"
]

[tool.poetry]
packages = [{include = "projeto_ml", from = "src"}]


[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
scikit-learn = "^1.5.0"
streamlit = "1.36.0"
matplotlib = "^3.9.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "6.29.4"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
